--- a/src/Components/Header/Hader.css
+++ b/src/Components/Header/Hader.css
@@ -1,7 +1,7 @@
 .header{
   height: 34vw;
   margin:30px auto;
-  background: url("header_img.png") no-repeat;
+  background: url("/dist/assets/header_img-DfvEA7zQ.png") no-repeat;
   background-size: contain;
   position: relative;
 }
@@ -24,6 +24,7 @@
   bottom: 10%;
   left: 5%;
  animation: fadeIn 3s;
+ /* position: relative; */
 }
 .header-container h2{
     font-weight: 500;
@@ -37,7 +38,7 @@
 
 .header-container button{
   border: none;
-  background-color: white;
+  background-color: wheat;
   padding: 1vw 4vw;
   border-radius: 3vw;
   color: #757575;
